tarea martes 06-05-2025 manejo de formulario
rcarvajal

--- a/Modulo_2_Angular/11_sesion/ejemplo/src/app/page/formulario/formulario.component.html
+++ b/Modulo_2_Angular/11_sesion/ejemplo/src/app/page/formulario/formulario.component.html
@@ -26,5 +26,14 @@
       </div>
     </div>
 
+    <button [disabled]="formulario.invalid" type="submit"
+    >Enviar</button>
+
   </form>
+
+  <h1>Datos Actuales</h1>
+  <pre>
+    {{usuario | json}}
+  </pre>
+
 </div>
